testsuite/tests/typecheck/should_fail/T13902.hs
{-# LANGUAGE TypeApplications #-}
module T13902 where

f :: a -> a
f x = x

g :: Int
g = f @Int 42 5
